// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests OtherOHItemCard Component should tests rendering OtherOHItemCard in collpased state 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          style={
            Object {
              "marginRight": 0,
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontWeight": "500",
              "paddingLeft": 10,
            }
          }
        >
          [missing "en.AUDITS.OTHER_ON_HANDS" translation] (15)
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 0.1,
            "opacity": 1,
            "paddingLeft": 5,
          }
        }
        testID="collapsible-card"
      >
        <MaterialIcon
          color="#000000"
          name="keyboard-arrow-down"
          size={25}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Tests OtherOHItemCard Component should tests rendering OtherOHItemCard while loading 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          style={
            Object {
              "marginRight": 0,
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontWeight": "500",
              "paddingLeft": 10,
            }
          }
        >
          [missing "en.AUDITS.OTHER_ON_HANDS" translation]
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 0.1,
            "opacity": 1,
            "paddingLeft": 5,
          }
        }
        testID="collapsible-card"
      >
        <MaterialIcon
          color="#000000"
          name="keyboard-arrow-up"
          size={25}
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "margin": 8,
            "padding": 5,
          }
        }
        testID="loader"
      >
        <ActivityIndicator
          size={30}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Tests OtherOHItemCard Component should tests rendering OtherOHItemCard with other OH Qty props 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffffff",
          "borderBottomColor": "#eeeeee",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          style={
            Object {
              "marginRight": 0,
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontWeight": "500",
              "paddingLeft": 10,
            }
          }
        >
          [missing "en.AUDITS.OTHER_ON_HANDS" translation] (15)
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 0.1,
            "opacity": 1,
            "paddingLeft": 5,
          }
        }
        testID="collapsible-card"
      >
        <MaterialIcon
          color="#000000"
          name="keyboard-arrow-up"
          size={25}
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffffff",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
          }
        }
      >
        <View />
      </View>
    </View>
  </View>
</View>
`;
